Modelos ML con hiperparámetros ajustados.

--- a/CreditCardFraudDetectionOptimizedModelsML.ipynb
+++ b/CreditCardFraudDetectionOptimizedModelsML.ipynb
@@ -2435,21 +2435,51 @@
         "\n",
         "Las métricas de cada modelo aplicado son:\n",
         "En el caso de recall: me concentro en el recall de la clase 1 (fraudes), por una razón: para todos los modelos la clase 0 tiene muy buen desempeño, y además considerando que es un dataset muy desbalanceado en el que la clase 1 ocupa menos del 1% de la data.\n",
-        "1.\tDecisionTree: Training AUC: 0.884806294942908, Testing AUC: 0.8543213489879043 Recall clase 1: 0.68\n",
-        "2.\tDecisionTree con hiperpaámetros ajustados: Training AUC: 0.924693636402414, Testing AUC: 0.8878809145461621, Recall clase 1: 0.77\n",
-        "3.\tKNN: Training AUC: 0.999932676905639, Testing AUC: 0.8580763139259927 Recall clase 1: 0.63\n",
-        "4.\tKNN con hiperparámetros ajustados: Training AUC: 0.9997526601586286, Testing AUC: 0.8690902835441544, Recall clase 1: 0.51\n",
-        "5.\tRegresión logística: Training AUC: 0.9672158698729242, Testing AUC: 0.9580312571567466, Recall clase 1: 0.51\n",
-        "6.\tRegresión logística con hiperparámetros ajustados: Training AUC: 0.9571779741866444, Testing AUC: 0.9497524380357462, Recall Clase 1: 0.51\n",
-        "7.\tSVC con undersampling y balanceado: Training AUC: 0.9819021948402002, Testing AUC: 0.9940953654188949, Recall clase 1: 0.93\n",
-        "Según estos resultados creo que el mejor modelo es SVC por que es el que mejor recall saca para la clase 1 y porque también presenta un muy buen desempeño en la curva ROC, tanto para los datos de entrenamiento como los de prueba."
+        "1.\tDecisionTree:\n",
+        "•\tPrecision - clase 1: 0.81\n",
+        "•\tRecall - clase 1: 0.68\n",
+        "•\tTraining AUC: 0.88\n",
+        "•\tTesting AUC: 0.85\n",
+        "2.\tDecisionTree con hiperparámetros ajustados:\n",
+        "•\tPrecision - clase 1: 0.90\n",
+        "•\tRecall - clase 1: 0.77\n",
+        "•\tTraining AUC: 0.92\n",
+        "•\tTesting AUC: 0.88\n",
+        "3.\tKNN:\n",
+        "•\tPrecision – clase 1: 0.93 \n",
+        "•\tRecall clase 1: 0.63\n",
+        "•\tTraining AUC: 0.99\n",
+        "•\tTesting AUC: 0.85\n",
+        "4.\tKNN con hiperparámetros ajustados:\n",
+        "•\tPrecision – clase 1: 0.91\n",
+        "•\tRecall - clase 1: 0.61\n",
+        "•\tTraining AUC: 0.99\n",
+        "•\tTesting AUC: 0.86\n",
+        "5.\tRegresión logística:\n",
+        "•\tPrecision – clase1: 0.91\n",
+        "•\tRecall - clase 1: 0.51\n",
+        "•\tTraining AUC: 0.96\n",
+        "•\tTesting AUC: 0.95\n",
+        "6.\tRegresión logística con hiperparámetros ajustados:\n",
+        "•\tPrecision - clase 1: 0.91\n",
+        "•\tRecall Clase 1: 0.51\n",
+        "•\tTraining AUC: 0.95\n",
+        "•\tTesting AUC: 0.94\n",
+        "7.\tSVC con undersampling y balanceado:\n",
+        "•\tPrecision – clase 1: 0.96\n",
+        "•\tRecall – clase 1: 0.93\n",
+        "•\tTraining AUC: 0.98\n",
+        "•\tTesting AUC: 0.99\n",
+        "\n",
+        "___________________________________________\n",
+        "Según estos resultados creo que el mejor modelo es SVC por que es el que mejor Precision y Recall saca para la clase 1 y porque también presenta un muy buen desempeño en la curva ROC, tanto para los datos de entrenamiento como los de prueba."
       ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXZfY1wcPmUugTZGQy00gq",
+      "authorship_tag": "ABX9TyOteAJE8Q5a4/5c+eELdH/8",
       "include_colab_link": true
     },
     "gpuClass": "standard",
